<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">肌力检测</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="open">打开设备</string>
	<string name="close">关闭设备</string>
	<string name="openBT">打开蓝牙</string>
	<string name="no_connect_bluetooth">蓝牙未连接</string>
	<string name="connected_bluetooth">蓝牙已连接</string>
	<string name="start_record_info">开始记录信息</string>
	<string name="stop_record_info">停止记录信息</string>
    <string name="ecg_device">心电仪 MAC 地址</string>
    <string name="ecg_list">已接收到文件列表</string>
	<string name="ecg_current">当前文件传输进度</string>
	<string name="ecg_total">文件传输总进度</string>
	<string name="ecg_choose">请选择</string>
	<string name="ecg_view">查看心电数据</string>
	<string name="ecg_delete">删除当前数据</string>
	<string name="ecg_clear">清空所有数据</string>
	<string name="BluetoothAdapterNotFound">蓝牙设备未找到，您的手机不支持蓝牙</string>
	<string name="UnableToStartServiceDiscovery">蓝牙设备未启用，请先打开蓝牙</string>
	<string name="CreateSocketFailed">创建 SOCKET 连接失败</string>
	<string name="ServiceDiscoveryFailed">查找设备失败，请检查心电仪是否已打开</string>
	<string name="CreateStreamFailed">创建输入流失败</string>
	<string name="DeviceDisconnected">设备已断开连接</string>
	<string name="StopBluttooth">外设已关闭，手机蓝牙即将关闭</string>
	<string name="discovery">搜索设备</string>
	<string name="warn">警告</string>
    <string name="wait">处理中</string>
    <string name="emailBody">文件发送，请处理，谢谢</string>
    <string name="email">email</string>
    
    <string name="standard_press">标准压力</string>
    <string name="real_press">真实压力</string>
    <string name="unconnect">未连接</string>
    <string name="no_getdata">暂未获取到数据</string>
    <string name="start_save">记 录</string>
    <string name="stop_save">停 止</string>
    <string name="clean">清 除</string>
    <string name="clean_success">数据清除成功</string>
    <string name="clean_fail">数据清除失败</string>
    <string name="no_sdcard">SD卡不存在，数据将保存在手机内存中</string>
    <string name="no_link_bluetooth">蓝牙设备未连接，请连接蓝牙设备</string>
    <string name="no_save_data">无数据需要保存</string>
    <string name="no_start">测量未开始</string>
    <string name="save_success">数据保存成功</string>
    <string name="save_fail">数据保存失败</string>
    <string name="voltage_values">电压值：</string>
    
     <string name="bt_not_enabled">本机无蓝牙</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">可用设备</string>
    <string name="scanning">查找中</string>
    <string name="select_device">选择设备</string>
    <string name="none_found">未发现设备</string>
    <string name="none_paired">无配对设备</string>
    <string name="button_scan">查找设备</string>
    <string name="device_connected">设备已经连接</string>
    <string name="connecting">正在连接...</string>
    
    <string name="getDataing">获取数据...</string>
    <string name="getdata">获取数据</string>
    
    <string name="sampling_rate">采样频率：</string>
    <string name="press_value">压力:</string>
    <string name="press_time">时间:</string>
    <string name="default_value">10</string>
    <string name="sampling_unit">HZ/S</string>
    <string name="loop_cycle">循环次数：</string>
    <string name="sample_name">样本名称：</string>
    <string name="exit_sample_name">样本名称已存在，请重新输入</string>
    <string name="no_sample_name">请输入保存数据的样本名称</string> 
    <string name="time_unit">s</string>
    <string name="press_unit">kg</string>
    
    <string name="comp_infoset">完成设置</string>
    <string name="add_press">添加压力</string>
    <string name="del_press">删除压力</string>
    <string name="loop_amount">请输入循环次数</string>
    <string name="default_amount">默认个数为两个</string>
    <string name="warning_info">请至少设置一组数据</string>
    
    <string name="max_referenceValue">大参考值：</string>
    <string name="min_referenceValue">小参考值：</string>
    <string name="no_referenceValue">请设置参考值</string>
</resources>